<resources>
    <string name="app_name">Travelling Buddy</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="status">Hi there!</string>
    <string name="default_name">Display Name</string>
    <string name="hey_there">Hey! there.</string>
    <string name="display_name">Display Name</string>
    <string name="title">Title</string>
    <string name="explore">Explore</string>
    <string name="display_text">Display Text</string>
    <string name="last_sceen">Last Sceen</string>
    <string name="type_your_message_here">Type your message here.</string>
    <string name="last_seen">Last Seen</string>
    <string name="display_username">Display UserName</string>
    <string name="friends">Friends</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="dispay_user_name">Dispay User Name</string>
    <string name="select_language">Select Language</string>
    <string name="friends_request">Friends Request</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="cancel">Cancel</string>
    <string name="travelling_buddy">Travelling Buddy</string>
    <string name="dash">_____________________________________________________</string>
    <string name="already_has_an_account">Already has an account?</string>
    <string name="verify_code">Verify Code</string>
    <string name="enter_6_digit_code">Enter 6 digit code.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_account">Don\'t have Account?</string>
    <string name="create_one">Create one</string>
    <string name="login">Login</string>
    <string name="email_or_username">Email or Username</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_has_an_account_click_here">Already Has An Account? Click Here!</string>
    <string-array name="Languages">
        <item>Select Language</item>
        <item>Azerbaijan</item>
        <item>Albanian</item>
        <item>Amharic</item>
        <item>English</item>
        <item>Arabic</item>
        <item>Armenian</item>
        <item>Afrikaans</item>
        <item>Basque</item>
        <item>Bashkir</item>
        <item>Belarusian</item>
        <item>Bengali</item>
        <item>Burmese</item>
        <item>Bulgarian</item>
        <item>Bosnain</item>
        <item>Welsh</item>
        <item>Hungarian</item>
        <item>Veitnamese</item>
        <item>Haitian(Creole)</item>
        <item>Galician</item>
        <item>Dutch</item>
        <item>Hill Mari</item>
        <item>Greek</item>
        <item>Georgian</item>
        <item>Gujarati</item>
        <item>Danish</item>
        <item>Hebrew</item>
        <item>Yiddish</item>
        <item>Indonesian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Icelandic</item>
        <item>Spanish</item>
        <item>Kazakh</item>
        <item>Kannada</item>
        <item>Catalan</item>
        <item>Kyrgyz</item>
        <item>Chinese</item>
        <item>Korean</item>
        <item>Xhosa</item>
        <item>Khmer</item>
        <item>Laotian</item>
        <item>Latin</item>
        <item>Latvian</item>
        <item>Lithunian</item>
        <item>Luxembourgish</item>
        <item>Malagasy</item>
        <item>Malay</item>
        <item>Malayalam</item>
        <item>Maltese</item>
        <item>Macedonian</item>
        <item>Maori</item>
        <item>Marathi</item>
        <item>Mari</item>
        <item>Mongolian</item>
        <item>German</item>
        <item>Nepali</item>
        <item>Norwegian</item>
        <item>Punjabi</item>
        <item>Papiamento</item>
        <item>Persian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Cebuano</item>
        <item>Serbian</item>
        <item>Sinhala</item>
        <item>Slovakian</item>
        <item>Slovenian</item>
        <item>Swahili</item>
        <item>Sundanese</item>
        <item>Tajik</item>
        <item>Thai</item>
        <item>Tagalog</item>
        <item>Tamil</item>
        <item>Tatar</item>
        <item>Telugu</item>
        <item>Turkish</item>
        <item>Udmurt</item>
        <item>Uzbek</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Hindi</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Swedish</item>
        <item>Scottish</item>
        <item>Estonian</item>
        <item>Esperanto</item>
        <item>Javanese</item>
        <item>Japanese</item>
    </string-array>
</resources>
